# Home-Credit-Default-Risk-project

./: .gitignore  README.md  data_download.py  pyproject.toml
notebooks/: baseline.ipynb  eda.ipynb  eda_bureau.ipynb  eda_previous_application.ipynb  tuning.ipynb
src/: data_download.py  data_loader.py  utils.py
src/features/: application.py  bureau.py  previous.py
src/models/: tuning.py
