[project]
name = "home-credit-default-risk-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle (>=1.8.3,<2.0.0)",
    "opendatasets (>=0.1.22,<0.2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
